--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,53 @@
 
 
 
+
+@book{bolstadLowlevelAnalysisHighdensity2004,
+  title = {Low-Level {{Analysis}} of {{High-density Oligonucleotide Array Data}}: {{Background}}, {{Normalization}} and {{Summarization}}},
+  shorttitle = {Low-Level {{Analysis}} of {{High-density Oligonucleotide Array Data}}},
+  author = {Bolstad, Benjamin Milo},
+  year = {2004},
+  publisher = {{University of California, Berkeley}},
+  googlebooks = {blJOAQAAMAAJ},
+  langid = {english}
+}
+
+
+@book{gentlemanBioinformaticsComputationalBiology2005,
+  title = {Bioinformatics and {{Computational Biology Solutions Using R}} and {{Bioconductor}}},
+  author = {Gentleman, Robert and Carey, Vincent and Huber, Wolfgang and Dudoit, Sandrine and Irizarry, Rafael},
+  year = {2005},
+  month = aug,
+  publisher = {{Springer}},
+  abstract = {Bioconductor is a widely used open source and open development software project for the analysis and comprehension of data arising from high-throughput experimentation in genomics and molecular biology. Bioconductor is rooted in the open source statistical computing environment R. This volume's coverage is broad and ranges across most of the key capabilities of the Bioconductor project, including  importation and preprocessing of high-throughput data from microarray, proteomic, and flow cytometry platforms  curation and delivery of biological metadata for use in statistical modeling and interpretation  statistical analysis of high-throughput data, including machine learning and visualization,  modeling and visualization of graphs and networks.  The developers of the software, who are in many cases leading academic researchers, jointly authored chapters. All methods are illustrated with publicly available data, and a major section of the book is devoted to exposition of fully worked case studies. This book is more than a static collection of descriptive text, figures, and code examples that were run by the authors to produce the text; it is a dynamic document. Code underlying all of the computations that are shown is made available on a companion website, and readers can reproduce every number, figure, and table on their own computers. Robert Gentleman is Head of the Program in Computational Biology at the Fred Hutchinson Cancer Research Center in Seattle. He is one of the two authors of the original R system and a leading member of the R core team. Vincent Carey is Associate Professor of Medicine (Biostatistics), Channing Laboratory, Brigham and Women's Hospital, Harvard Medical School. Gentleman and Carey are co-founders of the Bioconductor project. Wolfgang Huber is Group Leader in the European Molecular Biology Laboratory at the European Bioinformatics Institute in Cambridge. He has made influential contributions to the error modeling of microarray data. Rafael Irizarry is Associate Professor of Biostatistics at the Johns Hopkins Bloomberg School of Public Health in Baltimore. He is co-developer of RMA and GCRMA, two of the most popular methodologies for preprocessing high-density oligonucleotide arrays. Sandrine Dudoit is Assistant Professor in the Department of Biostatistics at the University of California, Berkeley. She has made seminal discoveries in the fields of multiple testing and generalized cross-validation and spearheaded the deployment of these findings in applied genomic science.},
+  isbn = {978-0-387-25146-2},
+  langid = {english},
+  keywords = {Computers / Computer Science,Computers / Software Development \& Engineering / General,Mathematics / Probability \& Statistics / General,Medical / Biostatistics,Science / Life Sciences / Anatomy \& Physiology,Science / Life Sciences / Biology,Science / Life Sciences / General,Science / Life Sciences / Molecular Biology,Science / Life Sciences / Zoology / General}
+}
+
+
+@article{wickhamWelcomeTidyverse2019,
+  title = {Welcome to the Tidyverse},
+  author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and Fran{\c c}ois, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and M{\"u}ller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686}
+}
+
+
+@book{kuhnFeatureEngineeringSelection2021,
+  title = {Feature {{Engineering}} and {{Selection}}: {{A Practical Approach}} for {{Predictive Models}}},
+  shorttitle = {Feature {{Engineering}} and {{Selection}}},
+  author = {Kuhn, Max and Johnson, Kjell},
+  year = {2021},
+  month = jun,
+  publisher = {{Taylor \& Francis Group}},
+  abstract = {A primary goal of predictive modeling is to find a reliable and effective predictive relationship between an available set of features and an outcome. Ineffective feature representations and the inclusion of irrelevant features are two key data characteristics that can prevent a model from demonstrating good performance. Feature Engineering and Selection: A Practical Approach for Predictive Models provides an extensive set of techniques for uncovering effective representations of the features for modeling the outcome and for finding an optimal subset of features to improve a model's predictive performance.},
+  googlebooks = {NWhnzgEACAAJ},
+  isbn = {978-1-03-209085-6},
+  langid = {english}
+}
+
