--- a/references.bib
+++ b/references.bib
@@ -51,3 +51,21 @@
   langid = {english}
 }
 
+
+@article{infer,
+	title = {{\textbraceleft}infer{\textbraceright}: An {\textbraceleft}R{\textbraceright} package for tidyverse-friendly statistical inference},
+	author = {Couch, Simon P. and Bray, Andrew P. and Ismay, Chester and Chasnovski, Evgeni and Baumer, Benjamin S. and {Çetinkaya-Rundel}, Mine},
+	year = {2021},
+	date = {2021},
+	pages = {3661},
+	volume = {6},
+	doi = {10.21105/joss.03661}
+}
+
+@article{tidymodels,
+	title = {Tidymodels: a collection of packages for modeling and machine learning using tidyverse principles.},
+	author = {Kuhn, Max and Wickham, Hadley},
+	year = {2020},
+	date = {2020},
+	url = {https://www.tidymodels.org}
+}
