--- a/infer.qmd
+++ b/infer.qmd
@@ -39,6 +39,8 @@ I choć istnieją prace, które wyraźnie wskazują na odporność pewnych metod
 W przypadku wspomnianych wyżej wątpliwości co do stosowalności poszczególnych metod weryfikacyjnych należy poszukać rozwiązań, które uprawdopodobnią wyniki uzyskane metodami klasycznymi.
 Powszechnie polecane w takiej sytuacji są rozwiązania opierające się na próbkowaniu (ang. *resampling*), wśród których najbardziej znane, to bootstrap i metody permutacyjne.
 
+![](images/Zrzut%20ekranu%202023-02-2%20o%2018.47.10.png){fig-align="center"}
+
 Niezależnie od stawianej hipotezy, badacz zadaje sobie ten sam rodzaj pytania podczas wnioskowania statystycznego: czy efekt/różnica w obserwowanych danych jest rzeczywista, czy wynika z przypadku?
 Aby odpowiedzieć na to pytanie, analityk zakłada, że efekt w obserwowanych danych był spowodowany przypadkiem i nazywa to założenie hipotezą zerową[^infer-5].
 Analityk następnie oblicza statystykę testową z danych, która opisuje obserwowany efekt.
@@ -57,6 +59,7 @@ w USA.
 
 ```{r}
 library(tidymodels)
+library(nord) # palettes
 glimpse(gss)
 ```
 
@@ -138,5 +141,186 @@ W przypadku weryfikacji hipotez dotyczących jednej zmiennej wyniki testu bootst
 
 ::: {#exm-2}
 Tym razem przetestujemy nico bardziej ambitną hipotezę.
-Będzie to hipoteza o równości median
+Będzie to hipoteza o równości median.
+Dane zostaną wygenerowane z rozkładów asymetrycznych, a w tych przypadkach porównywanie median ma więcej sensu niż średnich.
+
+```{r}
+#| label: fig-medians
+#| fig-cap: Porównanie rozkładów obu prób
+set.seed(44)
+x1 <- rchisq(20, 2)
+x2 <- -rchisq(15, 2)+10
+
+dt <- tibble(x = c(x1,x2)) |> 
+  mutate(gr = rep(c("A", "B"), times = c(20,15)))
+
+dt |> 
+  ggplot(aes(x, fill = gr))+
+  geom_density(alpha = 0.6)+
+  xlim(c(-2, 12))+
+  scale_fill_nord(palette = "victory_bonds")+
+  theme_minimal()
+```
+
+Jak widać na @fig-medians rozkłady różnią się zarówno położeniem, jak i kształtem.
+Ponieważ różnią się kształtem to porównanie obu rozkładów testem Manna-Whitneya nie odpowie nam na pytanie o równość median[^infer-6], a jedynie o tym, że z prawdopodobieństwem 50% losowa wartość z jednego rozkładu będzie większa niż losowa wartość z drugiego rozkładu.
+Zatem wyniki testu klasycznego nie będą wystarczające do oceny postawionej hipotezy.
+Przeprowadzimy zatem test metodami próbkowania.
+Najpierw techniką bootstrapową.
+
+```{r}
+set.seed(44)
+sample_diff <- dt |> 
+  specify(x~gr) |> 
+  calculate(stat = "diff in medians", order = c("A","B"))
+sample_diff
+
+null_diff <- dt |> 
+  specify(x~gr) |> 
+  hypothesise(null = "independence") |> 
+  generate(reps = 1000, type = "bootstrap") |> 
+  calculate(stat = "diff in medians", order = c("A","B"))
+```
+
+Oceńmy rozkład różnic z prób bootstrapowych.
+Jeśli hipoteza zerowa jest prawdziwa to rozkład różnicy median powinien oscylować wokół zera.
+
+```{r}
+#| label: fig-median2
+#| fig-cap: Rozkład różnic pomiędzy medianami z 95% przedziałem ufności
+ci <- null_diff |> 
+  get_confidence_interval(level = .95, type = "percentile")
+
+null_diff |> 
+  visualise()+
+  shade_ci(endpoints = ci)+
+  geom_vline(xintercept = 0, 
+             linewidth = 2,
+             color = "red")
+```
+
+Widać wyraźnie, że rozkład różnic pomiędzy medianami nie oscyluje wokół zera, co może świadczyć o konieczności odrzucenia hipotezy zerowej.
+
+```{r}
+null_diff |> 
+  get_p_value(obs_stat = 0, direction = "two-sided")
+wilcox.test(x1,x2)
+```
+
+Wartość $p$ mniejsza od $\alpha$ każe odrzucić hipotezę zerową na korzyść alternatywnej, czyli mediany nie są równe.
+
+Teraz przeprowadzimy test permutacyjny.
+
+```{r}
+#| label: fig-median3
+#| fig-cap: Rozkład różnic pomiędzy medianami z 95% przedziałem ufności
+
+set.seed(44)
+null_diff <- dt |> 
+  specify(x~gr) |> 
+  hypothesise(null = "independence") |> 
+  generate(reps = 1000, type = "permute") |> 
+  calculate(stat = "diff in medians", order = c("A","B"))
+
+ci <- null_diff |> 
+  get_ci(level = .95, 
+         type = "percentile")
+
+null_diff |> 
+  visualise()+
+  shade_ci(endpoints = ci)+
+  geom_vline(xintercept = sample_diff$stat,
+             linewidth = 2,
+             color = "red")
+```
+
+Jak widać z @fig-median3 rozkład różnic pomiędzy medianami dla całkowicie losowego układu obserwacji[^infer-7] oscyluje wokół zera.
+Wartość różnicy median obliczona na podstawie próby `r round(sample_diff,2)` nie leży wewnątrz przedziału ufności dla różnicy, należy zatem odrzucić hipotezę o równości median.
+Potwierdza to wynik testu permutacyjnego.
+
+```{r}
+#| label: fig-median4
+#| fig-cap: Rozkład różnic pomiędzy medianami z naniesionym p-value
+null_diff |> 
+  visualise() +
+  shade_p_value(obs_stat = sample_diff, direction = "two-sided")
+
+null_diff |> 
+  get_p_value(obs_stat = sample_diff, direction = "two-sided")
+```
+:::
+
+[^infer-6]: tylko w przypadku jednakowych kształtów rozkładów test ten weryfikuje równość median
+
+[^infer-7]: co odzwierciedla warunek z hipotezy zerowej
+
+::: {#exm-3}
+W tym przykładzie zbadamy niezależność cech `partyid` i `class` ze zbioru `gss`, które oznaczają odpowiednio sprzyjanie danej partii politycznej i subiektywną identyfikację klasy społeczno-ekonomicznej.
+
+```{r}
+#| label: fig-chisq
+#| fig-cap: Wykres słupkowy ilustrujący udziały poszczególnych grup wraz z wynikiem testu $\chi^2$ niezależności
+library(ggstatsplot)
+ggbarstats(data = gss,
+           x = class,
+           y = partyid, 
+           label = "count",
+           proportion.test = F, 
+           bf.message = F)
+```
+
+Powyższy test każe odrzucić hipotezę o niezależności cech, a ponieważ nie wymaga on spełnienia założeń (poza niezależnością obserwacji w próbie), to można uznać wynik ten za wiarygodny.
+Jedyny czynnik jaki mógłby wpłynąć na wynik testu $\chi^2$ to liczebności w tabeli kontyngencji poniżej 5.
+Dlatego tym bardziej warto przeprowadzić testowanie tej hipotezy za pomocą próbkowania.
+
+```{r}
+#| label: fig-chisq2
+#| fig-cap: Porównanie rozkładu statystyki testowej przy założeniu prawdziwości hipotezy zerowej z wartością statystyki testowej z próby
+set.seed(44)
+# obliczamy statystykę testową dla próby
+sample_stat <- gss |> 
+  drop_na(partyid, class) |> 
+  droplevels() |> 
+  specify(partyid~class) |> 
+  hypothesise(null = "independence") |>
+  calculate(stat = "Chisq")
+
+# generujemy próby zgodne z hipotezą zerową za pomocą próbkowania
+null_chisq_sim <- gss |> 
+  drop_na(partyid, class) |> 
+  droplevels() |>
+  specify(formula = partyid ~ class) |> 
+  hypothesise(null = "independence") |> 
+  generate(1000, type = "permute") |> 
+  calculate(stat = "Chisq")
+
+# porównujemy rozkład wynikający z hipotezy zerowej z
+# z wartością statystyki obliczoną z próby
+null_chisq_sim |> 
+  visualise() + 
+  shade_p_value(obs_stat = sample_stat, direction = "right")
+
+# obliczamy p-value
+null_chisq_sim |> 
+  get_p_value(obs_stat = sample_stat, direction = "right")
+```
+
+Widzimy, że test każe odrzucić hipotezę o niezależności cech, podobnie jak test teoretyczny.
+Pakiet `infer` daje nam możliwość generowania rozkładu teoretycznego zgodnego z hipotezą zerową nieco inaczej niż na podstawie resamplingu.
+
+```{r}
+#| label: fig-chisq3
+#| fig-cap: Porównanie rozkładu teoretycznego statystyki testowej przy założeniu prawdziwości hipotezy zerowej z wartością statystyki testowej z próby
+null_chisq_theory <- gss |> 
+  specify(partyid~class) |> 
+  assume(distribution = "Chisq", df = 9)
+
+null_chisq_theory |> 
+  visualise() + 
+  shade_p_value(obs_stat = sample_stat, 
+                direction = "right")
+pchisq(sample_stat$stat, df = 9, lower.tail = F)
+```
+
+Oczywiście wynik otrzymany metodą teoretyczną pokrywa się dokładnie z wynikiem klasycznego testu $\chi^2$.
 :::
