Dodałem miary regresyjne i przykład

--- a/references.bib
+++ b/references.bib
@@ -69,3 +69,98 @@
 	date = {2020},
 	url = {https://www.tidymodels.org}
 }
+
+@article{kvalsethCautionaryNoteR21985,
+  title = {Cautionary {{Note}} about {{R2}}},
+  author = {Kvalseth, Tarald O.},
+  year = {1985},
+  journal = {The American Statistician},
+  volume = {39},
+  number = {4},
+  pages = {279--285},
+  publisher = {{[American Statistical Association, Taylor \& Francis, Ltd.]}},
+  issn = {0003-1305},
+  doi = {10.2307/2683704},
+  abstract = {The coefficient of determination (R2) is perhaps the single most extensively used measure of goodness of fit for regression models. It is also widely misused. The primary source of the problem is that except for linear models with an intercept term, the several alternative R2 statistics are not generally equivalent. This article discusses various considerations and potential pitfalls in using the R2's. Specific points are exemplified by means of empirical data. A new resistant statistic is also introduced.}
+}
+
+
+@article{hyndmanAnotherLookMeasures2006,
+  title = {Another Look at Measures of Forecast Accuracy},
+  author = {Hyndman, Rob J. and Koehler, Anne B.},
+  year = {2006},
+  month = oct,
+  journal = {International Journal of Forecasting},
+  volume = {22},
+  number = {4},
+  pages = {679--688},
+  issn = {0169-2070},
+  doi = {10.1016/j.ijforecast.2006.03.001},
+  abstract = {We discuss and compare measures of accuracy of univariate time series forecasts. The methods used in the M-competition as well as the M3-competition, and many of the measures recommended by previous authors on this topic, are found to be degenerate in commonly occurring situations. Instead, we propose that the mean absolute scaled error become the standard measure for comparing forecast accuracy across multiple time series.},
+  langid = {english},
+  keywords = {Forecast accuracy,Forecast error measures,Forecast evaluation,M-competition,Mean absolute scaled error},
+  file = {/Users/majerek/Zotero/storage/2IR3XUBV/S0169207006000239.html}
+}
+
+
+@article{fransesNoteMeanAbsolute2016,
+  title = {A Note on the {{Mean Absolute Scaled Error}}},
+  author = {Franses, Philip Hans},
+  year = {2016},
+  month = jan,
+  journal = {International Journal of Forecasting},
+  volume = {32},
+  number = {1},
+  pages = {20--22},
+  issn = {0169-2070},
+  doi = {10.1016/j.ijforecast.2015.03.008},
+  abstract = {Hyndman and Koehler (2006) recommend that the Mean Absolute Scaled Error (MASE) should become the standard when comparing forecast accuracies. This note supports their claim by showing that the MASE fits nicely within the standard statistical procedures initiated by Diebold and Mariano (1995) for testing equal forecast accuracies. Various other criteria do not fit, as they do not imply the relevant moment properties, and this is illustrated in some simulation experiments.},
+  langid = {english},
+  keywords = {Forecast accuracy,Forecast error measures,Statistical testing},
+  file = {/Users/majerek/Zotero/storage/P3MF5PIL/S0169207015000448.html}
+}
+
+
+@book{EvaluatingForecastAccuracy,
+  title = {3.4 {{Evaluating}} Forecast Accuracy | {{Forecasting}}: {{Principles}} and {{Practice}} (2nd Ed)},
+  shorttitle = {3.4 {{Evaluating}} Forecast Accuracy | {{Forecasting}}},
+  abstract = {2nd edition},
+  file = {/Users/majerek/Zotero/storage/BR99W8F7/accuracy.html}
+}
+
+
+@article{bellon-maurelCriticalReviewChemometric2010,
+  title = {Critical Review of Chemometric Indicators Commonly Used for Assessing the Quality of the Prediction of Soil Attributes by {{NIR}} Spectroscopy},
+  author = {{Bellon-Maurel}, V{\'e}ronique and {Fernandez-Ahumada}, Elvira and Palagos, Bernard and Roger, Jean-Michel and McBratney, Alex},
+  year = {2010},
+  month = oct,
+  journal = {TrAC Trends in Analytical Chemistry},
+  volume = {29},
+  number = {9},
+  pages = {1073--1081},
+  issn = {0165-9936},
+  doi = {10.1016/j.trac.2010.05.006},
+  abstract = {Near-infrared (NIR) and mid-IR spectroscopy applied to soil compositional analysis started to develop markedly in the 1990s, taking advantage of earlier advances in instrumentation and chemometrics for agricultural products. Today, NIR spectroscopy is envisioned as replacing laboratory analysis in certain applications (e.g., soil-carbon-credit assessment at the farm level). However, accuracy is still unsatisfactory compared with standard laboratory procedures, leading some authors to think that such a challenge will never be met. This article investigates the critical points to be aware of when accuracy of NIR-based measurements is assessed. First is the decomposition of the standard error of prediction into components of bias and variance, only the latter being reducible by averaging. This decomposition is not used routinely in the soil-science literature. Contrarily, a log-normal distribution of reference values is very often encountered with soil samples [e.g., elemental concentrations (e.g., carbon)] with numerous small or zero values. These very skewed distributions make us take precautions when using inverse regression methods (e.g., principal component regression or partial least squares), which force the predictions towards the centre of the calibration set, leading to negative effects on the standard error prediction \textendash{} and therefore on prediction accuracy \textendash{} especially when log-normal distributions are encountered. Such distributions, which are very common for soil components, also make the ratio of performance to deviation a useless, even hazardous, tool, leading to erroneous conclusions. We propose a new index based on the quartiles of the empirical distribution \textendash{} ratio of performance to inter-quartile distance \textendash{} to overcome this problem.},
+  langid = {english},
+  keywords = {Accuracy,Bias,Calibration,Chemometrics,Figure of merit,Near infrared,NIR spectroscopy,Non-Gaussian population,Soil,Uncertainty},
+  file = {/Users/majerek/Zotero/storage/U2XZA5CJ/S0165993610001585.html}
+}
+
+
+@article{yehAnalysisStrengthConcrete2006,
+  title = {Analysis of {{Strength}} of {{Concrete Using Design}} of {{Experiments}} and {{Neural Networks}}},
+  author = {Yeh, I.-Cheng},
+  year = {2006},
+  month = aug,
+  journal = {Journal of Materials in Civil Engineering},
+  volume = {18},
+  number = {4},
+  pages = {597--604},
+  publisher = {{American Society of Civil Engineers}},
+  issn = {0899-1561},
+  doi = {10.1061/(ASCE)0899-1561(2006)18:4(597)},
+  abstract = {This paper investigates the potential of using design of experiments and neural networks to determine the effect of fly ash replacements, from 0 to 50\%, on early and late compressive strength, from 3 to 56days56days{$<$}math display="inline" overflow="scroll"{$><$}mrow{$><$}mn{$>$}56{$<$}/mn{$><$}mspace width="0.2em"{$><$}/mspace{$><$}mi{$>$}days{$<$}/mi{$><$}/mrow{$><$}/math{$>$}, of low- and high-strength concrete, at water-cementitious material ratios in the range of 0.3\textendash 0.7. The research reported in this paper shows the following conclusions: (1) using a simplex-centroid mixture experiment design, a much smaller number of experiments need to be performed to obtain meaningful data; (2) high correlations between the compressive strength and the component composition of concrete can be developed using the generalization capabilities of the neural networks; (3) analyses of variance to test the effects of the variables and their interactions on concrete strength can be performed; (4) the strength ratio, i.e., the percentage of strength of concrete containing fly ash to strength of concrete without fly ash (pure-cement concrete) based on the same {$\mathsl{w}$}/{$\mathsl{b}$}w/b{$<$}math display="inline" overflow="scroll"{$><$}mrow{$><$}mi{$>$}w{$<$}/mi{$><$}mo{$>$}/{$<$}/mo{$><$}mi{$>$}b{$<$}/mi{$><$}/mrow{$><$}/math{$>$} and the same age, is significantly reduced as the fly ash replacement increases, is somewhat reduced as the water-binder ratio decreases, and is highly significantly reduced as the age decreases; and (5) the higher fly ash content mixes yielded lower strength ratios throughout, the difference being greater at early age and low water-binder ratio.},
+  langid = {english},
+  keywords = {Concrete,Experimentation,Fly ash,Neural networks}
+}
+
