--- a/references.bib
+++ b/references.bib
@@ -164,3 +164,50 @@
   keywords = {Concrete,Experimentation,Fly ash,Neural networks}
 }
 
+
+@article{josephOptimalRatioData2022,
+  title = {Optimal Ratio for Data Splitting},
+  author = {Joseph, V. Roshan},
+  year = {2022},
+  journal = {Statistical Analysis and Data Mining: The ASA Data Science Journal},
+  volume = {15},
+  number = {4},
+  pages = {531--538},
+  issn = {1932-1872},
+  doi = {10.1002/sam.11583},
+  abstract = {It is common to split a dataset into training and testing sets before fitting a statistical or machine learning model. However, there is no clear guidance on how much data should be used for training and testing. In this article, we show that the optimal training/testing splitting ratio is p:1\$\$ \textbackslash sqrtp:1 \$\$, where p\$\$ p \$\$ is the number of parameters in a linear regression model that explains the data well.},
+  langid = {english},
+  keywords = {testing,training,validation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/sam.11583},
+  file = {/Users/majerek/Zotero/storage/IYDIEZFV/sam.html}
+}
+
+
+@article{johnsonPolarAuxinTransport2018,
+  title = {Polar Auxin Transport Is Implicated in Vessel Differentiation and Spatial Patterning during Secondary Growth in {{Populus}}},
+  author = {Johnson, Dan and Eckart, Phoebe and Alsamadisi, Noah and Noble, Hilary and Martin, Celia and Spicer, Rachel},
+  year = {2018},
+  journal = {American Journal of Botany},
+  volume = {105},
+  number = {2},
+  pages = {186--196},
+  issn = {1537-2197},
+  doi = {10.1002/ajb2.1035},
+  abstract = {Premise of the Study Dimensions and spatial distribution of vessels are critically important features of woody stems, allowing for adaptation to different environments through their effects on hydraulic efficiency and vulnerability to embolism. Although our understanding of vessel development is poor, basipetal transport of auxin through the cambial zone may play an important role. Methods Stems of Populus tremula \texttimes alba were treated with the auxin transport inhibitor N-1-naphthylphthalamic acid (NPA) in a longitudinal strip along the length of the lower stem. Vessel lumen diameter, circularity, and length; xylem growth; tension wood area; and hydraulic conductivity before and after a high pressure flush were determined on both NPA-treated and control plants. Key Results NPA-treated stems formed aberrant vessels that were short, small in diameter, highly clustered, and angular in cross section, whereas xylem formed on the untreated side of the stem contained typical vessels that were similar to those of controls. NPA-treated stems had reduced specific conductivity relative to controls, but this difference was eliminated by the high-pressure flush. The control treatment (lanolin + dimethyl sulfoxide) reduced xylem growth and increased tension wood formation, but never produced the aberrant vessel patterning seen in NPA-treated stems. Conclusions These results are consistent with a model of vessel development in which basipetal polar auxin transport through the xylem-side cambial derivatives is required for proper expansion and patterning of vessels and demonstrate that reduced auxin transport can produce stems with altered stem hydraulic properties.},
+  copyright = {\textcopyright{} 2018 Botanical Society of America},
+  langid = {english},
+  keywords = {auxin,conductivity,embolism,poplar,Populus,tension wood,vascular cambium,vessel,wood,xylem},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajb2.1035}
+}
+
+
+@book{kuhn2019,
+	title = {Feature Engineering and Selection},
+	author = {Kuhn, Max and Johnson, Kjell},
+	year = {2019},
+	month = {07},
+	date = {2019-07-25},
+	publisher = {Chapman and Hall/CRC},
+	doi = {10.1201/9781315108230},
+	url = {http://dx.doi.org/10.1201/9781315108230}
+}
